Removed deppendecy on Line-chart

--- a/TestingGrid/wwwroot/Widgets/Line-Chart/widget.html
+++ b/TestingGrid/wwwroot/Widgets/Line-Chart/widget.html
@@ -1,3 +1,4 @@
-﻿<i class="fas fa-plug" data-bind="click:$root.startsub" style="cursor: pointer"></i>
+﻿maxh = 7;maxw = 7;
+<!--<i class="fas fa-plug" data-bind="click:$root.startsub" style="cursor: pointer"></i>-->
 
 <canvas data-bind="attr: {id:id}"></canvas>
