--- a/TestingGrid/wwwroot/Widgets/Carousel/widget.html
+++ b/TestingGrid/wwwroot/Widgets/Carousel/widget.html
@@ -1,4 +1,5 @@
-﻿<html lang="en">
+﻿maxh = 7;maxw = 7;
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,7 +29,7 @@
 </head>
 <body>
     <div class="bs-example">
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <div data-bind="attr: {id:id}" class="carousel slide" data-ride="carousel">
             <!-- Carousel indicators -->
             <ol class="carousel-indicators">
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -38,13 +39,13 @@
             <!-- Wrapper for carousel items -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="/examples/images/slide1.png" alt="First Slide">
+                    <img src="/images/CT91qTCWcAAgpJW.png" alt="First Slide">
                 </div>
                 <div class="item">
-                    <img src="/examples/images/slide2.png" alt="Second Slide">
+                    <img src="/images/CT9pdZDWIAASGF1.jpg" alt="Second Slide">
                 </div>
                 <div class="item">
-                    <img src="/examples/images/slide3.png" alt="Third Slide">
+                    <img src="/images/fallout 4.jpe" alt="Third Slide">
                 </div>
             </div>
             <!-- Carousel controls -->
